--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.7.2",
     "@tailwindcss/ui": "^0.5.0"
+  },
+  "dependencies": {
+    "faunadb": "^3.0.1"
   }
 }
