--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
-  publish = "_site/"
-
   command = "#"
-
+  publish = "_site/"
   functions = "functions/"
+
+[[redirects]]
+  from = "/api/*"
+  to= "/.netlify/functions/:splat"
+  status = 200
