--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "scripts": {
     "start": "postcss styles/tailwind.css --o _tmp/style.css --watch",
-    "build": "cross-env NODE_ENV=production postcss styles/tailwind.css --o _site/style.css"
+    "build-styles": "cross-env NODE_ENV=production tailwindcss-cli build styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css",
+    "build-functions": "tsc"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
-    "html-minifier": "^4.0.0",
-    "postcss-clean": "^1.1.0",
-    "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.7.2",
-    "@tailwindcss/ui": "^0.5.0"
+    "@types/node": "^14.14.16",
+    "cross-env": "^7.0.3",
+    "tailwindcss": "^2.0.2",
+    "tailwindcss-cli": "^0.1.2",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "csv-stringify": "^5.5.1",
-    "faunadb": "^3.0.1",
-    "nodemailer": "^6.4.11"
+    "@types/aws-lambda": "^8.10.68",
+    "csv-stringify": "^5.6.0",
+    "faunadb": "^4.0.0",
+    "nodemailer": "^6.4.17"
   }
 }
