--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "start": "postcss styles/tailwind.css --o _tmp/style.css --watch",
-    "build-styles": "cross-env NODE_ENV=production tailwindcss-cli build styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css",
-    "build-functions": "tsc"
+    "build:styles": "cross-env NODE_ENV=production tailwindcss-cli build styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css",
+    "build:ts": "tsc"
   },
   "devDependencies": {
     "@types/node": "^14.14.16",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.68",
+    "@types/netlify-identity-widget": "^1.9.1",
     "csv-stringify": "^5.6.0",
     "faunadb": "^4.0.0",
     "nodemailer": "^6.4.17"
